--- a/vidix/vidix/README
+++ b/vidix/vidix/README
@@ -4,4 +4,4 @@ This library was designed and introduced as interface to userspace drivers
 to provide DGA everywhere where it's possible (unline X11).
 I hope that these drivers will be portable same as X11 (not only on *nix).
 
-For detail on how to develop new driver see main/DOCS/tech/vidix.txt
+For detail on how to develop new driver see vidix.txt
