--- a/vidix/NEWS
+++ b/vidix/NEWS
@@ -1,5 +1,15 @@
 VIDIX NEWS -- history of user-visible changes.
 
+Version 0.9.9.2
+
+* minor fixes in different drivers
+* new pci ids
+* pm3: fix gcc4 errors and warnings
+* make it working with latest kernels
+* radeon: prefer TV-out quality if connected
+* 64-bit related fixes
+* preliminary cygwin-1.5 and x86_64 ports
+
 Version 0.9.9.1
 
 * radeon_vid:
