--- a/vidix/NEWS
+++ b/vidix/NEWS
@@ -1,5 +1,9 @@
 VIDIX NEWS -- history of user-visible changes.
 
+Version 0.9.9.3
+
+* minor fixes and new pci ids
+
 Version 0.9.9.2
 
 * minor fixes in different drivers
