prepare new release
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@302 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/NEWS
+++ b/vidix/NEWS
@@ -1,5 +1,15 @@
 VIDIX NEWS -- history of user-visible changes.
 
+Version 1.0.0
+
+* multiple backports from MPlayerHQ by "Benjamin Zores" <ben@geexbox.org>
+  * warnings suppressing
+  * fixes and improvements
+  * Win32 related improvements
+  * h/w revision detection for cle266 chipset
+  * support for Geforce FX5500
+  * added vt8378 chipset as unichrome driver
+
 Version 0.9.9.3
 
 * minor fixes and new pci ids
