It was initially bad idea to use human names
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@338 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/libdha/README
+++ b/vidix/libdha/README
@@ -25,4 +25,4 @@ to use it as a normal user:
 The library is based on XFree86 and gfxdump (a utility from the GATOS project)
 sources.
 
-Original import and design by Nick Kurshev and Alex Beregszaszi.
+Original import and design by Nickols_K and Alex Beregszaszi.
