NEW: version 1.5: C++: added class Vidix
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@352 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/NEWS
+++ b/vidix/NEWS
@@ -1,5 +1,9 @@
 VIDIX NEWS -- history of user-visible changes.
 
+Version 1.5.0
+
+* Support for C++ was added
+
 Version 1.0.0
 
 * multiple backports from MPlayerHQ by "Benjamin Zores" <ben@geexbox.org>
